[fixes #32685283] firefox iframe was bad aligned for some themes

--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,10 @@
     border-bottom-width: 1px;
 }
 
+.pg-ide .pg-support-tabs .ui-tabs-panel {
+    clear: left;
+}
+
 @keyframes progressbg
 {
     0%   {background-position: 0 0;}
